@@ -14,6 +14,9 @@
  * limitations under the License.
  */
 package net.test.more.classcode.test2;
+import java.lang.reflect.Method;
+import org.more.classcode.aop.InnerChainAopInvocation;
+import org.more.util.ExceptionUtils;
 /**
  * 远程服务接口。
  * @version : 2015年1月3日
@@ -21,4 +24,18 @@ package net.test.more.classcode.test2;
  */
 public interface EchoService {
     public String echo(String sayMessage, long i);
+}
+class EchoServiceImpl implements EchoService {
+    public String echo(String sayMessage, long i) {
+        Class<?>[] pTypes = new Class<?>[] { String.class, Long.TYPE };
+        Object pObjects = new Object[] { sayMessage, Long.valueOf(i) };
+        try {
+            Method m = this.getClass().getMethod("doCall", pTypes);
+            InnerChainAopInvocation chain = null;
+            Object obj = null;
+            return (String) obj;
+        } catch (Throwable e) {
+            throw ExceptionUtils.toRuntimeException(e);
+        }
+    }
 }
